@@ -1,3 +1,7 @@
+n/a - April 29, 2004
+
+	* Added the heimdal init script.
+
 n/a - April 27, 2004
 
 	* Tagged as 2.0.4
